[Backend][Mobile] 支出登録時のカテゴリの指定をIDに変更する #281
